pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingFunctionParameterListSeparator.pkl
f = (arg1, arg2 arg3) -> arg1 + arg2 + arg3
res1 = 42